# linux-hello

./: .gitignore  .markdownlintignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CI_CD_INFRASTRUCTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBIAN_BUILD_SUMMARY.md  DEBIAN_PACKAGE.md  DEVELOPMENT.md  I18N_COMPLETION_SUMMARY.md  INDEX.md  INTERNATIONALIZATION_FINAL_REPORT.md  Makefile  PAM_CONFIG_EXAMPLES.txt  PHASE_2_COMPLETION.md  PHASE_3_4_PART_2_COMPLETION.md  PHASE_3_4_PART_3_PLAN.md  PHASE_3_4_PART_3_PROGRESS.md  PHASE_3_4_PLAN.md  PHASE_3_4_PROGRESS.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_RESULTS_2026.md  TODO.md  demo-video-preview.sh  hello-daemon-system.service  hello-daemon.service  install-pam.sh  kde-screenlock-linux-hello.pam  linux-hello-pam-autoconfigure  linux-hello-pam-autoconfigure.service  linux-hello-pam-autoconfigure.timer  linux-hello.desktop  overview.sh  pam-lib.sh  (+10 more)
.github/: DEVELOPMENT.md
.github/workflows/: README.md  build-debian.yml  build.yml  docs.yml  fuzz.yml  lint.yml  publish-ppa.yml  quality.yml  release-please.yml  test.yml
aur/: PKGBUILD
debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  files  install  libpam-linux-hello.install  libpam-linux-hello.postinst  libpam-linux-hello.postrm  linux-hello-daemon.install  linux-hello-daemon.postinst  linux-hello-daemon.postrm  linux-hello-daemon.preinst  linux-hello-gui.files  linux-hello-gui.install  linux-hello-models.install  linux-hello-tools.install  linux-hello.install  linux-hello.substvars  not-installed  postinst  postrm  preinst  rules  watch
debian/libpam-linux-hello/DEBIAN/: control  md5sums
debian/linux-hello-daemon/DEBIAN/: control  md5sums
debian/linux-hello-tools/DEBIAN/: control  md5sums
debian/linux-hello/DEBIAN/: control  md5sums  postinst  postrm  preinst
debian/patches/: enrollment-preview.patch  series
debian/polkit/: com.linuxhello.manage-faces.policy  com.linuxhello.pam-setup.policy
debian/scripts/: prepare-offline-build.sh
debian/source/: local-options  options
debian/tmp/etc/linux-hello/: config.toml.example
debian/tmp/usr/lib/systemd/user/: hello-daemon.service
debian/tmp/usr/share/doc/linux-hello/: INTEGRATION_GUIDE.md  QUICKSTART.md  kde-screenlock-linux-hello.pam  sudo-linux-hello.pam
docs/: CI_CD_INFRASTRUCTURE.md  COMMANDS_REFERENCE.md  DAEMON_IMPLEMENTATION.md  DEBIAN_PACKAGE.md  DESIGN.md  DEVELOPMENT.md  GUI_ARCHITECTURE.md  I18N_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  LAUNCHPAD.md  PAM_MODULE.md  QUICKSTART.md  RELEASE.md  SCREENLOCK_INTEGRATION.md
hello_camera/: Cargo.toml
hello_camera/src/: lib.rs
hello_daemon/: Cargo.toml
hello_daemon/examples/: test_cli.rs
hello_daemon/src/: authz.rs  camera.rs  capture_stream.rs  dbus.rs  dbus_interface.rs  dbus_signals.rs  lib.rs  main.rs  matcher.rs  pam_helper.rs  preview.rs  screenlock.rs  security_util.rs  storage.rs  test_support.rs  video_bridge.rs
hello_face_core/: Cargo.toml  build.rs
hello_face_core/fuzz/: Cargo.toml
hello_face_core/fuzz/fuzz_targets/: ir_liveness_score.rs  rgb_liveness_score.rs
hello_face_core/src/: arcface_extractor.rs  lib.rs  liveness.rs  scrfd_detector.rs  stub_detector.rs
linux_hello_cli/: Cargo.toml
linux_hello_cli/src/: main.rs
linux_hello_config/: Cargo.toml  README.md  build.rs
linux_hello_config/include/: VideoBridge.h
linux_hello_config/qml/: About.qml  AboutInfoRow.qml  ActionCard.qml  AppController.qml  Enrollment.qml  Home.qml  I18n.qml  License.qml  ManageFaces.qml  Settings.qml  TestAuth.qml  main.qml  main_simple.qml  qmldir  versions.sed
linux_hello_config/qml/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  ru.json  zh.json
linux_hello_config/src/: animation_tests.rs  animation_ticker.rs  button_state.rs  config.rs  dbus_client.rs  gui_integration_tests.rs  lib.rs  main.rs  main_launcher_simple.rs  performance_tests.rs  preview.rs  streaming.rs  ui.rs  video_bridge.cpp
pam_linux_hello/: Cargo.toml
pam_linux_hello/src/: lib.rs
qml/lockscreen/: MainBlock.qml
qml/sddm/: Login.qml
scripts/: dev-build.sh
