[workspace]
members = [
    "hello_face_core",
    "hello_camera",
    "hello_daemon",
    "pam_linux_hello",
    "linux_hello_cli",
    "linux_hello_config",
]

resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# abort: no unwinding on exit. For the daemon: immediate crash → systemd restart.
# For pam_linux_hello (cdylib): avoids Rust atexit handlers that conflict
# with the host runtime (rust-sudo-rs) and cause a SIGSEGV.
panic = "abort"

# CI profile: fast compilation, no release optimizations
# Avoids the 1h timeout caused by LTO + codegen-units=1
[profile.ci]
inherits = "test"
opt-level = 1
lto = false
codegen-units = 16

[workspace.package]
version = "1.0.6"
edition = "2021"
authors = ["Linux Hello Contributors"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }

# D-Bus
zbus = { version = "5.12", features = ["tokio"] }
zvariant = "5.9"

# PAM
pam-sys = "0.5"

# Image processing (future, for face detection)
ndarray = "0.17"
image = "0.25"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Database
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }

# Security
sha2 = "0.11"
rand = "0.10"

# ML inference (pure Rust, zero native dependency)
tract-onnx = "0.23"
tract-core = "0.23"

# ONNX Runtime via dynamic linking (libonnxruntime.so.1.23)
# api-23 matches the ONNX Runtime 1.23.x installed on the system
ort = { version = "2.0.0-rc.12", features = [
    "load-dynamic",
    "ndarray",
    "tracing",
    "api-23",
], default-features = false }

# System
libc = "0.2"
parking_lot = "0.12"
dirs = "6.0"
# Testing
tempfile = "3.8"
