[package]
name = "hello_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hello_face_core = { path = "../hello_face_core" }
hello_camera = { path = "../hello_camera" }

tokio.workspace = true
zbus = { workspace = true }
zvariant.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Stockage
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# Crypto pour hash embeddings
sha2.workspace = true

# System
libc.workspace = true

# CLI parsing pour daemon options
clap = { workspace = true, features = ["derive"] }

[lib]
name = "hello_daemon"
path = "src/lib.rs"

[[bin]]
name = "hello-daemon"
path = "src/main.rs"
