[package]
name = "hello_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hello_face_core = { path = "../hello_face_core" }
hello_camera = { path = "../hello_camera" }

tokio.workspace = true
zbus = { workspace = true }
zvariant.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Storage
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
] }

# Crypto for embedding hashes
sha2.workspace = true

# System
libc.workspace = true

# CLI parsing for daemon options
clap = { workspace = true, features = ["derive"] }

# Concurrency
parking_lot.workspace = true

# Image processing for preview frames
image.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "hello_daemon"
path = "src/lib.rs"

[[bin]]
name = "hello-daemon"
path = "src/main.rs"
