[package]
name = "hello_face_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndarray = { workspace = true, optional = true }
image = { workspace = true, optional = true }
tract-onnx = { workspace = true, optional = true }
tract-core = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[build-dependencies]
# For downloading the ONNX models in build.rs
# (std dependencies are sufficient: std::net is not available in a pure build.rs,
# curl/wget will be used via std::process::Command)

[features]
default = ["backends"]
backends = ["dep:ndarray", "dep:image", "tract"]
tract = [
    "dep:tract-onnx",
    "dep:tract-core",
    "dep:ndarray",
    "dep:image",
    "dep:ort",
]
