[package]
name = "hello_face_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndarray = { workspace = true, optional = true }
image = { workspace = true, optional = true }
tract-onnx = { workspace = true, optional = true }
tract-core = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true

[build-dependencies]
# Downloading the ONNX models in build.rs uses std::process::Command for
# curl/wget (std::net isn't available in a pure build.rs) — dirs is just for
# resolving the XDG data dir the models get cached under, same as lib.rs's
# own default_models_dir().
dirs.workspace = true

[features]
default = ["backends"]
backends = ["dep:ndarray", "dep:image", "tract"]
tract = [
    "dep:tract-onnx",
    "dep:tract-core",
    "dep:ndarray",
    "dep:image",
    "dep:ort",
]
