[package]
name = "linux_hello_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hello_daemon = { path = "../hello_daemon" }
hello_camera = { path = "../hello_camera" }
hello_face_core = { path = "../hello_face_core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync"] }
zbus = { workspace = true, features = ["tokio"] }
zvariant.workspace = true
serde = { workspace = true }
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }
parking_lot.workspace = true

# D-Bus async client pour communiquer avec daemon
# La logique métier reste dans hello_daemon, cette app est UI pure QML
async-trait = "0.1"

# Configuration
dirs = "6.0"
