[package]
name = "linux_hello_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# main.rs is a standalone launcher (spawns the qml6 process and a local
# control server via std::net) — it doesn't use any of hello_daemon,
# hello_camera, hello_face_core, zbus, tokio, serde, clap, etc. Those were
# only used by src/*.rs files that were never wired into lib.rs/main.rs via
# `mod` (dead code, removed) and pulled in build time/binary size for
# nothing, including hello_face_core's heavy ONNX/tract dependencies.
[dependencies]
