[package]
name = "pam_linux_hello"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "pam_linux_hello"
path = "src/lib.rs"

[dependencies]
hello_face_core = { path = "../hello_face_core" }
hello_daemon = { path = "../hello_daemon" }

pam-sys.workspace = true
zbus = { workspace = true, features = ["tokio"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Runtime async pour PAM (attention: PAM n'est pas async)
tokio = { workspace = true, features = ["rt-multi-thread"] }

# Parsing options PAM
shlex = "1.3"

# System
libc.workspace = true
