[package]
name = "pam_linux_hello"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "pam_linux_hello"
path = "src/lib.rs"

# Dépendances minimales : pas de tokio, pas de hello_daemon/hello_face_core.
# Un cdylib PAM chargé dans sudo (rust-sudo-rs) ne doit embarquer aucun runtime
# async — leurs atexit handlers conflictuent avec le runtime Rust de l'hôte
# et provoquent un SIGSEGV à la sortie du processus.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
libc.workspace = true

