[package]
name = "pam_linux_hello"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "pam_linux_hello"
path = "src/lib.rs"

# Minimal dependencies: no tokio, no hello_daemon/hello_face_core.
# A PAM cdylib loaded into sudo (rust-sudo-rs) must not embed any async
# runtime — their atexit handlers conflict with the host's Rust runtime
# and cause a SIGSEGV on process exit.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
libc.workspace = true

